# mars-lander-simulation

./: .gitignore  CMakeLists.txt  vcpkg.json
data/: example1.txt  example2.txt  example3.txt  example4.txt  example5.txt
scripts/: combine.bash
src/: attachable.hpp  codingame_main.cpp  config.hpp  constants.hpp  coordinates_format.hpp  coordinates_utils.hpp  game_data.cpp  game_data.hpp  genetic.cpp  genetic.hpp  gui.cpp  gui.hpp  individual.cpp  individual.hpp  lander.cpp  lander.hpp  load_file.cpp  load_file.hpp  main.cpp  math.hpp  play.cpp  play.hpp  random.cpp  random.hpp  simulation.cpp  simulation.hpp  simulation_data.hpp  single_pass.cpp  threadpool.hpp  tracy_shim.hpp  trajectory.hpp  utility.hpp  view_transform.hpp  world.cpp  world.hpp
support/ports/openal-soft/: cpp17.patch  portfile.cmake
support/ports/tracy/: portfile.cmake
tests/: CMakeLists.txt  math.cpp
